metadata/force-app/main/default/objects/CustomName_ojJZf__c/CustomName_ojJZf__c.object-meta.xml
<CustomObject>
    <description>Description_fNCXm</description>
    <label>CustomLabel_dXrjr</label>
    <nameField>
        <label>CustomLabel_dXrjr</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_dXrjrs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>