metadata/force-app/main/default/objects/CustomName_ojJZf__c/fields/CustomField_lVztj__c.field-meta.xml
<CustomField>
    <fullName>CustomField_lVztj__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldXAEFL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>